feat: add username in home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="scan_result">Hasil Pindai</string>
     <string name="logo">Logo</string>
     <string name="tagline">Lebih dari sahabat kulit</string>
-    <string name="greeting">Halo, Azel!</string>
+    <string name="greeting">Halo,</string>
     <string name="date_home">25 Agustus 2022</string>
     <string name="desc_survey_dashboard">Bagaimana\nkondisi\nkulitmu\nhari ini?</string>
     <string name="daily_survey">Survey Harian</string>
